Added Apparmor profile, maybe too much hardened :)

--- a/csplogger-apparmor.toml
+++ b/csplogger-apparmor.toml
@@ -40,90 +40,9 @@ AllowExec = [
 
 # denied executable files
 DenyExec = [
-	"/sbin/*",
-	"/bin/arch",
-	"/bin/ash",
-	"/bin/base64",
-	"/bin/bbconfig",
-	"/bin/busybox",
-	"/bin/cat",
-	"/bin/chgrp",
-	"/bin/chmod",
-	"/bin/chown",
-	"/bin/conspy",
-	"/bin/cp",
-	"/bin/date",
-	"/bin/dd",
-	"/bin/df",
-	"/bin/dmesg",
-	"/bin/dnsdomainname",
-	"/bin/dumpkmap",
-	"/bin/echo",
-	"/bin/ed",
-	"/bin/egrep",
-	"/bin/false",
-	"/bin/fatattr",
-	"/bin/fdflush",
-	"/bin/fgrep",
-	"/bin/fsync",
-	"/bin/getopt",
-	"/bin/grep",
-	"/bin/gunzip",
-	"/bin/gzip",
-	"/bin/hostname",
-	"/bin/ionice",
-	"/bin/iostat",
-	"/bin/ipcalc",
-	"/bin/kbd_mode",
-	"/bin/kill",
-	"/bin/link",
-	"/bin/linux32",
-	"/bin/linux64",
-	"/bin/ln",
-	"/bin/login",
-	"/bin/ls",
-	"/bin/lzop",
-	"/bin/makemime",
-	"/bin/mkdir",
-	"/bin/mknod",
-	"/bin/mktemp",
-	"/bin/more",
-	"/bin/mount",
-	"/bin/mountpoint",
-	"/bin/mpstat",
-	"/bin/mv",
-	"/bin/netstat",
-	"/bin/nice",
-	"/bin/pidof",
-	"/bin/ping",
-	"/bin/ping6",
-	"/bin/pipe_progress",
-	"/bin/printenv",
-	"/bin/ps",
-	"/bin/pwd",
-	"/bin/reformime",
-	"/bin/rev",
-	"/bin/rm",
-	"/bin/rmdir",
-	"/bin/run-parts",
-	"/bin/sed",
-	"/bin/setpriv",
-	"/bin/setserial",
-	"/bin/sleep",
-	"/bin/stat",
-	"/bin/stty",
-	"/bin/su",
-	"/bin/sync",
-	"/bin/tar",
-	"/bin/touch",
-	"/bin/true",
-	"/bin/umount",
-	"/bin/uname",
-	"/bin/usleep",
-	"/bin/watch",
-	"/bin/zcat",
-	"/usr/bin/*",
-	"/usr/sbin/*"
+	"/bin/**",
+	"/sbin/**",
+	"/usr/sbin/**",
 ]
 
 # allowed capabilities
